force-app/main/default/objects/Cadastro_de_Livro__c/Cadastro_de_Livro__c.object-meta.xml
<CustomObject>
    <label>Cadastro de Livro</label>
    <nameField>
        <label>Nome Livro</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cadastro de Livros</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>