force-app/main/default/objects/Cadastro_de_Livro__c/fields/Autor__c.field-meta.xml
<CustomField>
    <fullName>Autor__c</fullName>
    <label>Autor</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>