force-app/main/default/objects/Cadastro_de_Livro__c/fields/C_digo_Livro__c.field-meta.xml
<CustomField>
    <fullName>C_digo_Livro__c</fullName>
    <label>Código Livro</label>
    <length>55</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>