force-app/main/default/objects/Cadastro_de_Livro__c/fields/Estoque__c.field-meta.xml
<CustomField>
    <fullName>Estoque__c</fullName>
    <label>Estoque</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>