force-app/main/default/objects/Cadastro_de_Livro__c/fields/T_tulo__c.field-meta.xml
<CustomField>
    <fullName>T_tulo__c</fullName>
    <label>Título</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>